// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleExpander renders expanded 1`] = `
<div
  className="ToggleExpander ToggleExpander_expanded"
  onClick={[MockFunction]}
>
  <Bem
    block="ToggleExpander"
    elem="icon"
  >
    <icon />
  </Bem>
</div>
`;

exports[`ToggleExpander renders not expanded 1`] = `
<div
  className="ToggleExpander ToggleExpander"
  onClick={[MockFunction]}
>
  <Bem
    block="ToggleExpander"
    elem="icon"
  >
    <icon />
  </Bem>
</div>
`;
